--- a/index.html
+++ b/index.html
@@ -513,6 +513,9 @@
       </div>
     </div>
 
+<div>
+  Something 
+</div>
 
   </footer>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/js/bootstrap.bundle.min.js"
